[package]
name = "cadom"
version = "0.3.0"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Some error-processing helpers for Rust"
repository = "https://github.com/kryvashek/cadom"
license = "MIT"
keywords = ["error", "thiserror", "anyhow", "utils", "error-management"]
categories = ["development-tools::debugging"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cubob = "1.3.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
thiserror = "1"
serde_json = "1.0"

[features]
default = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]